--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -4,8 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/css/main.css" />
-  <script src="/js/main.js" />
-  <title>{{ title }}</title>
+  <link href="https://unpkg.com/prismjs@1.20.0/themes/prism-okaidia.css" rel="stylesheet" />
+  <script src="/js/main.js"></script>
+  <title>RUM Archive - {{ title }}</title>
 </head>
 <body>
   <header>{% include "nav.njk" %}</header>
