--- a/src/_includes/layouts/page.njk
+++ b/src/_includes/layouts/page.njk
@@ -6,7 +6,7 @@ layout: layouts/base.njk
   <div class="container">
     <div class="columns">
       <div class="column is-10 is-offset-1">
-        <div class="content mt-5">
+        <div class="content mt-5 mb-5">
           <h1>{{ title }}</h1>
           {% if content | toc %}
             <h2>Table of Contents</h2>
