--- a/src/index.njk
+++ b/src/index.njk
@@ -3,6 +3,6 @@ title: Homepage
 layout: layouts/base.njk
 ---
 
-<div class="content container mt-5">
+<div class="content container mt-5 mb-5">
   {% renderFile "./README.md" %}
 </div>
