Include RUM Archive logo

--- a/src/_includes/nav.njk
+++ b/src/_includes/nav.njk
@@ -1,7 +1,7 @@
 <nav class="navbar is-light" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
-    <a class="navbar-item" href="https://rum-archive.com">
-      <img-todo src="/assets/logo.png" width="112" height="28" />
+    <a class="navbar-item" href="/">
+      <img src="/assets/rum-archive-logo-square.svg" width="28" height="28" />
     </a>
 
     <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbar-main">
