Added an initial Blog post

--- a/src/_includes/nav.njk
+++ b/src/_includes/nav.njk
@@ -50,6 +50,10 @@
         Datasets
       </a>
 
+      <a href="/blog" class="navbar-item">
+        Blog
+      </a>
+
       <a href="/contribute" class="navbar-item">
         Contribute!
       </a>
