--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -170,7 +170,7 @@ pre[class*=language-] {
 }
 
 .table-container:not(:last-child), .table:not(:last-child), .title:not(:last-child),
-.subtitle:not(:last-child), .content:not(:last-child) {
+.subtitle:not(:last-child), .content:not(:last-child), .box:not(:last-child) {
   margin-bottom: 1.5rem;
 }
 
@@ -2317,6 +2317,22 @@ table th {
     font-size: 1.25rem;
   }
 }
+.box {
+  background-color: hsl(0deg, 0%, 100%);
+  border-radius: 6px;
+  box-shadow: 0 0.5em 1em -0.125em rgba(10, 10, 10, 0.1), 0 0px 0 1px rgba(10, 10, 10, 0.02);
+  color: hsl(0deg, 0%, 29%);
+  display: block;
+  padding: 1.25rem;
+}
+
+a.box:hover, a.box:focus {
+  box-shadow: 0 0.5em 1em -0.125em rgba(10, 10, 10, 0.1), 0 0 0 1px #006a80;
+}
+a.box:active {
+  box-shadow: inset 0 1px 2px rgba(10, 10, 10, 0.2), 0 0 0 1px #006a80;
+}
+
 .container {
   flex-grow: 1;
   margin: 0 auto;
@@ -5520,6 +5536,342 @@ body.has-spaced-navbar-fixed-bottom {
   .columns.is-variable.is-8-fullhd {
     --columnGap: 2rem;
   }
+}
+
+.has-text-white {
+  color: hsl(0deg, 0%, 100%) !important;
+}
+
+a.has-text-white:hover, a.has-text-white:focus {
+  color: #e6e6e6 !important;
+}
+
+.has-background-white {
+  background-color: hsl(0deg, 0%, 100%) !important;
+}
+
+.has-text-black {
+  color: hsl(0deg, 0%, 4%) !important;
+}
+
+a.has-text-black:hover, a.has-text-black:focus {
+  color: black !important;
+}
+
+.has-background-black {
+  background-color: hsl(0deg, 0%, 4%) !important;
+}
+
+.has-text-light {
+  color: hsl(0deg, 0%, 96%) !important;
+}
+
+a.has-text-light:hover, a.has-text-light:focus {
+  color: #dbdbdb !important;
+}
+
+.has-background-light {
+  background-color: hsl(0deg, 0%, 96%) !important;
+}
+
+.has-text-dark {
+  color: hsl(0deg, 0%, 21%) !important;
+}
+
+a.has-text-dark:hover, a.has-text-dark:focus {
+  color: #1c1c1c !important;
+}
+
+.has-background-dark {
+  background-color: hsl(0deg, 0%, 21%) !important;
+}
+
+.has-text-primary {
+  color: #006a80 !important;
+}
+
+a.has-text-primary:hover, a.has-text-primary:focus {
+  color: #00404d !important;
+}
+
+.has-background-primary {
+  background-color: #006a80 !important;
+}
+
+.has-text-primary-light {
+  color: #ebfbff !important;
+}
+
+a.has-text-primary-light:hover, a.has-text-primary-light:focus {
+  color: #b8f3ff !important;
+}
+
+.has-background-primary-light {
+  background-color: #ebfbff !important;
+}
+
+.has-text-primary-dark {
+  color: #00cbf5 !important;
+}
+
+a.has-text-primary-dark:hover, a.has-text-primary-dark:focus {
+  color: #29daff !important;
+}
+
+.has-background-primary-dark {
+  background-color: #00cbf5 !important;
+}
+
+.has-text-link {
+  color: #006a80 !important;
+}
+
+a.has-text-link:hover, a.has-text-link:focus {
+  color: #00404d !important;
+}
+
+.has-background-link {
+  background-color: #006a80 !important;
+}
+
+.has-text-link-light {
+  color: #ebfbff !important;
+}
+
+a.has-text-link-light:hover, a.has-text-link-light:focus {
+  color: #b8f3ff !important;
+}
+
+.has-background-link-light {
+  background-color: #ebfbff !important;
+}
+
+.has-text-link-dark {
+  color: #00cbf5 !important;
+}
+
+a.has-text-link-dark:hover, a.has-text-link-dark:focus {
+  color: #29daff !important;
+}
+
+.has-background-link-dark {
+  background-color: #00cbf5 !important;
+}
+
+.has-text-info {
+  color: hsl(207deg, 61%, 53%) !important;
+}
+
+a.has-text-info:hover, a.has-text-info:focus {
+  color: #2b74b1 !important;
+}
+
+.has-background-info {
+  background-color: hsl(207deg, 61%, 53%) !important;
+}
+
+.has-text-info-light {
+  color: #eff5fb !important;
+}
+
+a.has-text-info-light:hover, a.has-text-info-light:focus {
+  color: #c6ddf1 !important;
+}
+
+.has-background-info-light {
+  background-color: #eff5fb !important;
+}
+
+.has-text-info-dark {
+  color: #296fa8 !important;
+}
+
+a.has-text-info-dark:hover, a.has-text-info-dark:focus {
+  color: #368ace !important;
+}
+
+.has-background-info-dark {
+  background-color: #296fa8 !important;
+}
+
+.has-text-success {
+  color: #006a80 !important;
+}
+
+a.has-text-success:hover, a.has-text-success:focus {
+  color: #00404d !important;
+}
+
+.has-background-success {
+  background-color: #006a80 !important;
+}
+
+.has-text-success-light {
+  color: #ebfbff !important;
+}
+
+a.has-text-success-light:hover, a.has-text-success-light:focus {
+  color: #b8f3ff !important;
+}
+
+.has-background-success-light {
+  background-color: #ebfbff !important;
+}
+
+.has-text-success-dark {
+  color: #00cbf5 !important;
+}
+
+a.has-text-success-dark:hover, a.has-text-success-dark:focus {
+  color: #29daff !important;
+}
+
+.has-background-success-dark {
+  background-color: #00cbf5 !important;
+}
+
+.has-text-warning {
+  color: hsl(44deg, 100%, 77%) !important;
+}
+
+a.has-text-warning:hover, a.has-text-warning:focus {
+  color: #ffd257 !important;
+}
+
+.has-background-warning {
+  background-color: hsl(44deg, 100%, 77%) !important;
+}
+
+.has-text-warning-light {
+  color: #fffaeb !important;
+}
+
+a.has-text-warning-light:hover, a.has-text-warning-light:focus {
+  color: #ffecb8 !important;
+}
+
+.has-background-warning-light {
+  background-color: #fffaeb !important;
+}
+
+.has-text-warning-dark {
+  color: #946c00 !important;
+}
+
+a.has-text-warning-dark:hover, a.has-text-warning-dark:focus {
+  color: #c79200 !important;
+}
+
+.has-background-warning-dark {
+  background-color: #946c00 !important;
+}
+
+.has-text-danger {
+  color: hsl(348deg, 86%, 61%) !important;
+}
+
+a.has-text-danger:hover, a.has-text-danger:focus {
+  color: #ee1742 !important;
+}
+
+.has-background-danger {
+  background-color: hsl(348deg, 86%, 61%) !important;
+}
+
+.has-text-danger-light {
+  color: #feecf0 !important;
+}
+
+a.has-text-danger-light:hover, a.has-text-danger-light:focus {
+  color: #fabdc9 !important;
+}
+
+.has-background-danger-light {
+  background-color: #feecf0 !important;
+}
+
+.has-text-danger-dark {
+  color: #cc0f35 !important;
+}
+
+a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
+  color: #ee2049 !important;
+}
+
+.has-background-danger-dark {
+  background-color: #cc0f35 !important;
+}
+
+.has-text-black-bis {
+  color: hsl(0deg, 0%, 7%) !important;
+}
+
+.has-background-black-bis {
+  background-color: hsl(0deg, 0%, 7%) !important;
+}
+
+.has-text-black-ter {
+  color: hsl(0deg, 0%, 14%) !important;
+}
+
+.has-background-black-ter {
+  background-color: hsl(0deg, 0%, 14%) !important;
+}
+
+.has-text-grey-darker {
+  color: hsl(0deg, 0%, 21%) !important;
+}
+
+.has-background-grey-darker {
+  background-color: hsl(0deg, 0%, 21%) !important;
+}
+
+.has-text-grey-dark {
+  color: hsl(0deg, 0%, 29%) !important;
+}
+
+.has-background-grey-dark {
+  background-color: hsl(0deg, 0%, 29%) !important;
+}
+
+.has-text-grey {
+  color: hsl(0deg, 0%, 48%) !important;
+}
+
+.has-background-grey {
+  background-color: hsl(0deg, 0%, 48%) !important;
+}
+
+.has-text-grey-light {
+  color: hsl(0deg, 0%, 71%) !important;
+}
+
+.has-background-grey-light {
+  background-color: hsl(0deg, 0%, 71%) !important;
+}
+
+.has-text-grey-lighter {
+  color: hsl(0deg, 0%, 86%) !important;
+}
+
+.has-background-grey-lighter {
+  background-color: hsl(0deg, 0%, 86%) !important;
+}
+
+.has-text-white-ter {
+  color: hsl(0deg, 0%, 96%) !important;
+}
+
+.has-background-white-ter {
+  background-color: hsl(0deg, 0%, 96%) !important;
+}
+
+.has-text-white-bis {
+  color: hsl(0deg, 0%, 98%) !important;
+}
+
+.has-background-white-bis {
+  background-color: hsl(0deg, 0%, 98%) !important;
 }
 
 .is-marginless {
