Add basic highcharts setup and insights page

--- a/src/_includes/nav.njk
+++ b/src/_includes/nav.njk
@@ -54,6 +54,10 @@
         Blog
       </a>
 
+      <a href="/insights" class="navbar-item">
+        Insights
+      </a>
+
       <a href="/contribute" class="navbar-item">
         Contribute!
       </a>
