--- a/src/_sass/main.scss
+++ b/src/_sass/main.scss
@@ -32,6 +32,7 @@ $link: $green;
 
 @import "../../node_modules/bulma/sass/components/navbar.sass";
 @import "../../node_modules/bulma/sass/components/card.sass";
+@import "../../node_modules/bulma/sass/components/media.sass";
 
 @import "../../node_modules/bulma/sass/grid/columns.sass";
 
