WIP blog posts for anniversary

--- a/src/blog/index.njk
+++ b/src/blog/index.njk
@@ -14,7 +14,7 @@ layout: layouts/base.njk
             {% if loop.index0 < 9 %}
               <div class="box">
                 <article class="media">
-                  <div class="media-left">
+                  <div class="media-left my-auto">
                     <figure class="image is-128x128">
                       <a href="{{ blog.url }}">
                         <img src="{{ blog.data.thumbnail }}" alt="{{ blog.data.title }}" width="128" height="128" />
